--- a/index.html
+++ b/index.html
@@ -2,58 +2,89 @@
 <html>
 <head>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
-<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
-    <meta charset='utf-8' />
-    <title>Tim's Pizza</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
+  <meta charset='utf-8' />
+  <title>Tim's Pizza</title>
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
-  <nav>
-    <div class="logo-detail">
-      <img src="img/tim_mohawk.jpeg" id="tim-pic">
-      <a href="#" id="company-name">Tim's Pizza Place</a>
+  <body>
+    <nav>
+      <div class="logo-detail">
+        <img src="img/tim_mohawk.jpeg" id="tim-pic">
+        <a href="#" id="company-name">Tim's Pizza Place</a>
+      </div>
+      <div class="hamburger">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+      <ul id="nav-links">
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Globalization</a>
+        </li>
+        <li>
+          <a href="#">Order Online</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="page-container">
+      <div class="announcement-container">
+        <h1>World domination coming soon</h1>
+        <h2>Tim's is going global! Use the map below to find a location near you.</h2>
+        <div id='map' style='width: 400px; height: 300px;'></div>
+        <script>
+          mapboxgl.accessToken = 'pk.eyJ1IjoicmFoLW9vbCIsImEiOiJjamdlajdqeW4wa2l6MzJxa3QxajRqM2g3In0.pN0niraFEt-7kfvueW7j1g';
+          var map = new mapboxgl.Map({
+              container: 'map',
+              style: 'mapbox://styles/rah-ool/cjgejps0e001p2smyv1fakpd0'
+          });
+          var geojson = {
+            type: 'FeatureCollection',
+            features: [{
+              type: 'Feature',
+              geometry: {
+                type: 'Point',
+                coordinates: [-72.288424, 43.703301]
+              },
+              properties: {
+                title: "Tim's Pizza Place",
+                description: 'Hanover, NH'
+              }
+            },
+            {
+              type: 'Feature',
+              geometry: {
+                type: 'Point',
+                coordinates: [28.3852, 81.5639]
+              },
+              properties: {
+                title: 'Disney World!',
+                description: 'Up to you'
+              }
+            }]
+          };
+          // add markers to map
+          geojson.features.forEach(function(marker) {
+            // create a HTML element for each feature
+            var el = document.createElement('div');
+            el.className = 'marker';
+            // make a marker for each feature and add to the map
+            new mapboxgl.Marker(el)
+              .setLngLat(marker.geometry.coordinates)
+              .setPopup(new mapboxgl.Popup({ offset: 25 }) // add popups
+              .setHTML('<h3>' + marker.properties.title + '</h3><p>' + marker.properties.description + '</p>'))
+              .addTo(map);
+          });
+        </script>
+      </div>
     </div>
-
-    <div class="hamburger">
-      <div class="bar1"></div>
-      <div class="bar2"></div>
-      <div class="bar3"></div>
-    </div>
-
-    <ul id="nav-links">
-      <li>
-        <a href="#">Home</a>
-      </li>
-      <li>
-        <a href="#">About</a>
-      </li>
-      <li>
-        <a href="#">Globalization</a>
-      </li>
-      <li>
-        <a href="#">Order Online</a>
-      </li>
-    </ul>
-  </nav>
-
-  <div class="page-container">
-    <div class="announcement-container">
-      <h1>World domination coming soon</h1>
-      <h2>Tim's is going global! Use the map below to find a location near you.</h2>
-      <div id='map' style='width: 400px; height: 300px;'></div>
-<script>
-  mapboxgl.accessToken = 'pk.eyJ1Ijoic3RvcGljMTMiLCJhIjoiY2pnYmQ1Y3llMXl0ejJ4cWpsbmJrMWtmdiJ9.R1lW4rNrIfO4m1mBx18LNA';
-  var map = new mapboxgl.Map({
-      container: 'map',
-      style: 'mapbox://styles/stopic13/cjgbgrd0n4mos2rnihvtw2ipr'
-  });
-
-</script>
-    </div>
-  </div>
-
-</body>
+  </body>
 </html>
